fix: ui improvements, better readability :D

--- a/src/app/[lang]/globals.css
+++ b/src/app/[lang]/globals.css
@@ -71,7 +71,7 @@ html, body {
     --input: 240 5.9% 90%;
     --ring: 240 5% 64.9%;
     --radius: 0.5rem;
-    --header-height: 3.5rem;
+    --header-height: 3rem;
     --content-height: calc(100vh - var(--header-height));
   }
 
